# glassbox

./: AGENTS.md  README.md  pyproject.toml
docs/: cli-activation-pipeline.md  viewer-v0-next.md
src/glassbox/: __init__.py  analysis.py  cli.py  model_runner.py  toy_model.py
tests/: test_analysis.py  test_cli.py
viewer/: index.html  package-lock.json  package.json  pnpm-lock.yaml
viewer/app/: globals.css  layout.tsx  page.tsx
viewer/app/api/trace/: route.ts
viewer/components/: trace-viewer.tsx
viewer/lib/: trace.ts  types.ts
viewer/public/samples/: trace.json
