[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glassbox"
version = "0.1.0"
description = "CLI tools for visualizing internal transformer signals."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2.0",
]

[project.optional-dependencies]
hf = [
  "transformers>=4.40.0",
]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
glassbox = "glassbox.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
